plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.diffplug.spotless' version '6.25.0' apply false
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

allprojects {
    version = '0.0.1-SNAPSHOT'
    group = 'app.profanity-filter'

    repositories {
        mavenCentral()
    }

    java {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'com.diffplug.spotless'

    spotless {
        java {
            googleJavaFormat()
            removeUnusedImports()
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    dependencies {
        // default spring boot dependencies
        implementation 'org.springframework.boot:spring-boot-starter'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        implementation 'org.springframework.boot:spring-boot-configuration-processor'

        // default  utilities
        implementation 'org.apache.commons:commons-lang3:3.12.0'
        implementation 'com.google.guava:guava:31.1-jre'

        // default lombok
        implementation 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'


        // Cache
        implementation 'org.springframework.boot:spring-boot-starter-cache'
        implementation "com.github.ben-manes.caffeine:caffeine:3.1.8"
    }

    bootJar.enabled = false
    jar.enabled = true
    tasks.named('test') { useJUnitPlatform() }

    test {
        outputs.upToDateWhen { false }
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
            showStandardStreams = true
            exceptionFormat = 'full'
            showExceptions = true
            showCauses = true
            showStackTraces = true
        }
    }
}

// Root 프로젝트의 test task를 수정
test.dependsOn subprojects.test

bootJar.enabled = false
jar.enabled = true
